--- a/app/views/allocations/request-places.html
+++ b/app/views/allocations/request-places.html
@@ -1,33 +1,27 @@
 {% extends "layout.html" %}
-{% set title = 'Courses as an accredited body' %}
+{% set title = 'Request places' %}
+{% set backLink = "/allocations/new-provider" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
-{% block beforeContent %}
-
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a prototype of a new service. Some parts of this prototype do not work yet. '
-}) }}
-
-{{ govukBackLink({
-  text: "Back",
-  href: "/pe-allocation/new-provider"
-}) }}
-{% endblock %}
+{% set requestingProviderName %}
+	{% if data['requestingProvider'] != "Find an organisation not listed above" %}
+		{{ data['requestingProvider'] }}
+	{% else %}
+		{{ data['schoolList'] }}
+	{% endif %}
+{% endset %}
 
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
   
-      <form action="/pe-allocation/check-answers" method="post" class="form">
+      <form action="/allocations/check-answers" method="post" class="form">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-0">
             <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-6">
-              <span class="govuk-caption-xl">Hope Valley College</span>
+              <span class="govuk-caption-xl">{{ requestingProviderName }}</span>
               How many places would you like to request?
             </h1>
             <p class="govuk-body">Say how many trainees the organisation would like to recruit - make sure this number is as accurate as possible.</p>
