Allocations file tidy up

--- a/app/views/allocations/offer-pe.html
+++ b/app/views/allocations/offer-pe.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/pe-allocation/offer-pe-e" method="post" class="form">
+    <form action="/allocations/offer-pe" method="post" class="form">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
