--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -99,7 +99,7 @@
 
       {% if data["allocations-open"] %}
         <h2 class="govuk-heading-m">
-          <a href="/allocations">Request PE courses for 2021 - 2022</a>
+          <a href="/allocations">Request PE courses for 2022 to 2023</a>
         </h2>
 
         <p>Only accredited bodies are able to see this section. Use it to request fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
@@ -112,7 +112,7 @@
       
       {% if not data["allocations-open"] %}
         <h2 class="govuk-heading-m">
-          <a href="/allocations">View PE courses for 2021 to 2022</a>
+          <a href="/allocations">View PE courses for 2022 to 2023</a>
         </h2>
 
         <p>Use this section to view the outcome of requests for fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
