--- a/app/views/allocations/index.html
+++ b/app/views/allocations/index.html
@@ -17,12 +17,20 @@
 	{% endif %}
 {% endset %}
 
+{% set enfieldChangeLinktext %}
+  {% if data['offer-pe'] %}
+    Change
+  {% else %}
+    Confirm choice
+  {% endif %}
+{% endset %}
+
 {% block content %}
   <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Request PE courses for 2022/23</h1>
-      <p>You must request any fee-funded PE courses for 2022/23 by 10 July 2021. You do not need to request any other courses, including salaried PE.</p>
+      <h1 class="govuk-heading-xl">Request PE courses for 2022 to 2023</h1>
+      <p>You must request any fee-funded PE courses for 2022 to 2023 by 10 July 2021. You do not need to request any other courses, including salaried PE.</p>
       <p>Once you’ve made a request, you can change it before 10 July.</p>
       <h2 class="govuk-heading-l govuk-!-margin-top-4">Do you want to request PE again for these organisations?</h2>
       <p>These are the organisations currently offering fee-funded PE that you’re the accredited body for. You’ll be included if you offer your own courses.</p>
@@ -48,10 +56,16 @@
                   Enfield County School for Girls
               </th>
               <td class="govuk-table__cell">
-                <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--grey">Yet to request</span>
+                {% if data['offer-pe'] == "Yes" %}
+                   <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">Requested</span>
+                {% elseif data['offer-pe'] == "No" %}
+                  <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--red">Not requested</span>
+                {% else %}
+                  <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--grey">Yet to request</span>
+                {% endif %}
               </td>
               <td class="govuk-table__cell">
-                <a href="/allocations/offer-pe" class="govuk-link--no-visited-state">Confirm choice</a>
+                <a href="/allocations/offer-pe" class="govuk-link--no-visited-state">{{ enfieldChangeLinktext }}</a>
               </td>
             </tr>
             <tr class="govuk-table__row">
@@ -59,13 +73,7 @@
                   London Academy
               </th>
               <td class="govuk-table__cell">
-                {% if data['offer-pe'] == "Yes" %}
-                   <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--green">Requested</span>
-                {% else if data['offer-pe'] == "No" %}
-                  <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--red">Not requested</span>
-                {% else %}
-                  <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--grey">Yet to request</span>
-                {% endif %}
+                <span class="govuk-tag govuk-tag-small govuk-tag-table govuk-tag--grey">Yet to request</span>
               </td>
               <td class="govuk-table__cell">
                 <a href="#" class="govuk-link--no-visited-state">Confirm choice</a>
@@ -90,7 +98,7 @@
       {% if data['requestingProvider'] or data['schoolList'] %}
 
         <div class="body-text">
-          <h2 class="govuk-heading-m govuk-!-margin-top-7">New PE courses in 2022/23</h2>
+          <h2 class="govuk-heading-m govuk-!-margin-top-7">New PE courses in 2022 to 2023</h2>
           <table class="govuk-table ucas-info-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -123,7 +131,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l govuk-!-margin-top-4">Do you want to request PE for any other organisations?</h2>
-      <p>Request fee-funded PE for 2022/23 for any organisations not currently offering this course. We’ll need to know how many places each one would like to offer. </p>
+      <p>Request fee-funded PE for 2022 to 2023 for any organisations not currently offering this course. We’ll need to know how many places each one would like to offer. </p>
       <a class="govuk-button govuk-!-margin-bottom-9" href="/allocations/new-provider">Choose an organisation</a>
     </div>
   </div>
