--- a/app/views/allocations/request-sent.html
+++ b/app/views/allocations/request-sent.html
@@ -1,19 +1,8 @@
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% extends "layout.html" %}
-{% set title = 'Request Sent' %}
+{% set title = 'Request sent' %}
+{% set backLink = "/allocations" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
-
-
-{% block beforeContent %}
-
-{{ govukPhaseBanner({
-  tag: {
-    text: "prototype"
-  },
-  html: 'This is a prototype of a new service. Some parts of this prototype do not work yet. '
-}) }}
-{% endblock %}
 
 {% block content %}
 
@@ -24,14 +13,14 @@
       <h1 class="govuk-panel__title">
         Request sent
       </h1>
-      <div class="govuk-panel__body">You’ve confirmed that Enfield School would like to offer PE in 2021/22</div>
+      <div class="govuk-panel__body">You’ve confirmed that Enfield School would like to offer PE in 2022 to 2023</div>
 	  </div>
     <h2 class="govuk-heading-m">What happens now?</h2>
     <p class="govuk-body">You have until 10 July to change this request. After this date, we’ll send an email to (insert email address) confirming your choice and setting out next steps.</p>
     <h2 class="govuk-heading-m">How many places will be allocated?</h2>
     <p>In September we'll let you know how many places we've allocated for this course. This will be based on the organisation's current allocation of <strong>(INSERT FIGURE)</strong> places.
     <p>If you have any questions, contact <a href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
-    <a class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6 govuk-link--no-visited-state" style="display: block" href="/pe-allocations-yes">Return to Request PE courses for 2021/22</a>
+    <a class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6 govuk-link--no-visited-state" style="display: block" href="/allocations">Return to Request PE courses for 2022 to 2023</a>
   </div>
 </div>
 
