--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -182,9 +182,9 @@
         <p class="govuk-body">
           {% if visaSponsorship === "Yes" %}
             {% if courseType === "Salaried" %}
-              We are able to sponsor a Skilled worker visa, however this is not guaranteed.
+              We can <a href="https://www.gov.uk/government/publications/train-to-teach-in-england-non-uk-applicants/train-to-teach-in-england-non-uk-applicants#visas-and-immigration">sponsor Skilled worker visas</a>, but this is not guaranteed.
             {% else %}
-              We are able to sponsor a Student visa, however this is not guaranteed.
+              We can <a href="https://www.gov.uk/government/publications/train-to-teach-in-england-non-uk-applicants/train-to-teach-in-england-non-uk-applicants#visas-and-immigration">sponsor Student visas</a>, but this is not guaranteed.
             {% endif %}
           {% elseif visaSponsorship === "No" %}
 
