Copy updates to match production

--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -55,7 +55,7 @@
         </ul>
       </div>
 
-      {% include "includes/_access-and-preferences.html" %}
+      {# {% include "includes/_access-and-preferences.html" %} #}
     </div>
     <div class="govuk-grid-column-one-third">
       <div class="status-box">
