--- a/app/views/allocations/no-request-confirmed.html
+++ b/app/views/allocations/no-request-confirmed.html
@@ -14,7 +14,8 @@
 		</h1>
 		<p>You’ve confirmed that Enfield School will not be offering fee-funded PE in 2022 to 2023.</p>
 		<h2 class="govuk-heading-m">What happens now? </h2>
-		<p>You don’t need to do anything else. If you want to change this choice, you have until 10 July to do so. If you have any questions, contact <a href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
+		<p>You don’t need to do anything else. If you want to change this choice, you have until 10 July to do so.</p> 
+		<p>If you have any questions, contact <a href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
 		<a class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6 govuk-link--no-visited-state" style="display: block" href="/allocations">Return to Request PE courses for 2022 to 2023</a>
   	</div>
 </div>
