--- a/app/views/allocations/request-sent.html
+++ b/app/views/allocations/request-sent.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% set title = 'Request sent' %}
-{% set backLink = "/allocations" %}
 {% block pageTitle %}{{ title }}{% endblock %}
-{% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
 {% block content %}
 
@@ -16,9 +14,9 @@
       <div class="govuk-panel__body">You’ve confirmed that Enfield School would like to offer PE in 2022 to 2023</div>
 	  </div>
     <h2 class="govuk-heading-m">What happens now?</h2>
-    <p class="govuk-body">You have until 10 July to change this request. After this date, we’ll send an email to (insert email address) confirming your choice and setting out next steps.</p>
+    <p class="govuk-body">You have until 10 July to change this request. After this date, we’ll send an email to your organisation confirming your choice and setting out next steps.</p>
     <h2 class="govuk-heading-m">How many places will be allocated?</h2>
-    <p>In September we'll let you know how many places we've allocated for this course. This will be based on the organisation's current allocation of <strong>(INSERT FIGURE)</strong> places.
+    <p>In September we'll let you know how many places we've allocated for this course. This will be based on the organisation's allocation for 2020 to 2021.</p>
     <p>If you have any questions, contact <a href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.</p>
     <a class="govuk-body govuk-!-font-weight-bold govuk-!-margin-top-6 govuk-link--no-visited-state" style="display: block" href="/allocations">Return to Request PE courses for 2022 to 2023</a>
   </div>
