--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -102,7 +102,7 @@
           <a href="/allocations">Request PE courses for 2022 to 2023</a>
         </h2>
 
-        <p>Only accredited bodies are able to see this section. Use it to request fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
+        <p>Use it to view the outcome of requests for fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
         <p>This includes:</p>
         <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
           <li>your own courses</li>
