--- a/app/views/allocations/index.html
+++ b/app/views/allocations/index.html
@@ -161,7 +161,7 @@
       <div class="govuk-grid-column-two-thirds">
         
         <div class="body-text">
-          <table class="govuk-table ucas-info-table">
+          <table class="govuk-table ucas-info-table govuk-!-margin-bottom-9">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
                 <th class="govuk-table__header subject-col">Organisation</th>
