--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -97,7 +97,7 @@
         <li>add locations</li>
       </ul>
 
-      {% if data["allocations-window-open"] == true %}
+      {% if data["allocations-window"] == 'open' %}
         <h2 class="govuk-heading-m">
           <a href="/allocations">Request PE courses for 2022 to 2023</a>
         </h2>
@@ -110,7 +110,20 @@
         </ul>
       {% endif %}
       
-      {% if not data["allocations-window-open"] %}
+      {% if data["allocations-window"] == 'closed' %}
+        <h2 class="govuk-heading-m">
+          <a href="/allocations">Request PE courses for 2022 to 2023</a>
+        </h2>
+
+        <p>Only accredited bodies are able to see this section. Use it to request fee-funded PE courses (ones without a salary) for the next recruitment cycle.</p>
+        <p>This includes:</p>
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
+          <li>your own courses</li>
+          <li>courses you’re the accredited body for (you must request these on behalf of training partners)</li>
+        </ul>
+      {% endif %}
+      
+      {% if data["allocations-window"] == 'confirmed' %}
         <h2 class="govuk-heading-m">
           <a href="/allocations">View PE courses for 2022 to 2023</a>
         </h2>
