Show grey "Not set" if unanswered

--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -203,6 +203,8 @@
             {% elif minDegreeClass == "3" %}
               3rd class degree or above, or equivalent
             {% endif %}
+          {% else %}
+            Not set
           {% endif %}
           {% if data[course.programmeCode + '-degree-subject-required'] === "Yes" %}
             <br><br>
@@ -210,57 +212,65 @@
           {% endif %}
         {% endset %}
 
+        {% set degreeValueClasses = "" if data[course.programmeCode + '-degree-minimum-required'] else "empty" %}
+
         {% set gcseValueHtml %}
-            <p class="govuk-body">Grade 4 (C) or above in English{{", maths and science" if course.name == "Primary" else " and maths" }}, or equivalent</p>
-          {% if data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
-            <p class="govuk-body">{{ data[course.programmeCode + '-gcse-requirements'] }}</p>
+
+          {% if englishGcseFlexibility %}
+              <p class="govuk-body">Grade 4 (C) or above in English{{", maths and science" if course.name == "Primary" else " and maths" }}, or equivalent</p>
+            {% if data[course.programmeCode + '-gcse-additional-requirements'] === "Yes" %}
+              <p class="govuk-body">{{ data[course.programmeCode + '-gcse-requirements'] }}</p>
+            {% endif %}
+
+            {% set englishGcseFlexibility = data[course.programmeCode + '-gcse-english-flexibility'] %}
+            {% set mathsGcseFlexibility = data[course.programmeCode + '-gcse-maths-flexibility'] %}
+            {% set scienceGcseFlexibility = data[course.programmeCode + '-gcse-science-flexibility'] %}
+
+            {% set subjectsMustHave = [] %}
+            {% set subjectsCanBePending = [] %}
+            {% set subjectsPendingOrEquivalencyTests = [] %}
+
+            {% if englishGcseFlexibility === "pending" %}
+              {% set subjectsCanBePending = subjectsCanBePending | push("English") %}
+            {% elif englishGcseFlexibility === "must" %}
+              {% set subjectsMustHave = subjectsMustHave | push("English") %}
+            {% elif englishGcseFlexibility === "equivalency-test-offered" %}
+              {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("English") %}
+            {% endif %}
+
+            {% if mathsGcseFlexibility === "pending" %}
+              {% set subjectsCanBePending = subjectsCanBePending | push("maths") %}
+            {% elif mathsGcseFlexibility === "must" %}
+              {% set subjectsMustHave = subjectsMustHave | push("maths") %}
+            {% elif mathsGcseFlexibility === "equivalency-test-offered" %}
+              {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("maths") %}
+            {% endif %}
+
+            {% if scienceGcseFlexibility === "pending" %}
+              {% set subjectsCanBePending = subjectsCanBePending | push("science") %}
+            {% elif scienceGcseFlexibility === "must" %}
+              {% set subjectsMustHave = subjectsMustHave | push("science") %}
+            {% elif scienceGcseFlexibility === "equivalency-test-offered" %}
+              {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("science") %}
+            {% endif %}
+
+            {% if subjectsMustHave | length > 0 %}
+              <p class="govuk-body">You will not consider candidates who are currently taking {{"a" if (subjectsMustHave | length) === 1 }} {{ subjectsMustHave | formatOrList }} GCSE{{"s" if (subjectsMustHave | length) > 1 }} or who need to take equivalency tests.</p>
+            {% endif %}
+
+            {% if subjectsCanBePending | length > 0 %}
+              <p class="govuk-body">You will not consider candidates who need to take an equivalency test for {{"a" if (subjectsCanBePending | length) === 1 }} {{ subjectsCanBePending | formatOrList }} but you will consider those already taking the GCSE{{"s" if (subjectsCanBePending | length) > 1 }}.</p>
+            {% endif %}
+
+            {% if subjectsPendingOrEquivalencyTests | length > 0 %}
+              <p class="govuk-body">You will consider candidates who are currently taking {{"a" if (subjectsPendingOrEquivalencyTests | length) === 1 }} {{ subjectsPendingOrEquivalencyTests | formatOrList }} GCSE{{"s" if (subjectsPendingOrEquivalencyTests | length) > 1 }} or who need to take equivalency tests.</p>
+            {% endif %}
+          {% else %}
+            Not set
           {% endif %}
-
-          {% set englishGcseFlexibility = data[course.programmeCode + '-gcse-english-flexibility'] %}
-          {% set mathsGcseFlexibility = data[course.programmeCode + '-gcse-maths-flexibility'] %}
-          {% set scienceGcseFlexibility = data[course.programmeCode + '-gcse-science-flexibility'] %}
-
-          {% set subjectsMustHave = [] %}
-          {% set subjectsCanBePending = [] %}
-          {% set subjectsPendingOrEquivalencyTests = [] %}
-
-          {% if englishGcseFlexibility === "pending" %}
-            {% set subjectsCanBePending = subjectsCanBePending | push("English") %}
-          {% elif englishGcseFlexibility === "must" %}
-            {% set subjectsMustHave = subjectsMustHave | push("English") %}
-          {% elif englishGcseFlexibility === "equivalency-test-offered" %}
-            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("English") %}
-          {% endif %}
-
-          {% if mathsGcseFlexibility === "pending" %}
-            {% set subjectsCanBePending = subjectsCanBePending | push("maths") %}
-          {% elif mathsGcseFlexibility === "must" %}
-            {% set subjectsMustHave = subjectsMustHave | push("maths") %}
-          {% elif mathsGcseFlexibility === "equivalency-test-offered" %}
-            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("maths") %}
-          {% endif %}
-
-          {% if scienceGcseFlexibility === "pending" %}
-            {% set subjectsCanBePending = subjectsCanBePending | push("science") %}
-          {% elif scienceGcseFlexibility === "must" %}
-            {% set subjectsMustHave = subjectsMustHave | push("science") %}
-          {% elif scienceGcseFlexibility === "equivalency-test-offered" %}
-            {% set subjectsPendingOrEquivalencyTests = subjectsPendingOrEquivalencyTests | push("science") %}
-          {% endif %}
-
-          {% if subjectsMustHave | length > 0 %}
-            <p class="govuk-body">You will not consider candidates who are currently taking {{"a" if (subjectsMustHave | length) === 1 }} {{ subjectsMustHave | formatOrList }} GCSE{{"s" if (subjectsMustHave | length) > 1 }} or who need to take equivalency tests.</p>
-          {% endif %}
-
-          {% if subjectsCanBePending | length > 0 %}
-            <p class="govuk-body">You will not consider candidates who need to take an equivalency test for {{"a" if (subjectsCanBePending | length) === 1 }} {{ subjectsCanBePending | formatOrList }} but you will consider those already taking the GCSE{{"s" if (subjectsCanBePending | length) > 1 }}.</p>
-          {% endif %}
-
-          {% if subjectsPendingOrEquivalencyTests | length > 0 %}
-            <p class="govuk-body">You will consider candidates who are currently taking {{"a" if (subjectsPendingOrEquivalencyTests | length) === 1 }} {{ subjectsPendingOrEquivalencyTests | formatOrList }} GCSE{{"s" if (subjectsPendingOrEquivalencyTests | length) > 1 }} or who need to take equivalency tests.</p>
-          {% endif %}
-
         {% endset %}
+
+        {% set gcseValueClasses = "" if englishGcseFlexibility else "empty" %}
 
         {{ govukSummaryList({
           classes: '',
@@ -270,7 +280,8 @@
                 text: "Degree"
               },
               value: {
-                html: degreeValueHtml
+                html: degreeValueHtml,
+                classes: degreeValueClasses
               },
               actions: {
                 items: [
@@ -287,7 +298,8 @@
                 text: "GCSEs"
               },
               value: {
-                html: gcseValueHtml
+                html: gcseValueHtml,
+                classes: gcseValueClasses
               },
               actions: {
                 items: [
