--- a/app/views/allocations/no-request-confirmed.html
+++ b/app/views/allocations/no-request-confirmed.html
@@ -7,9 +7,8 @@
 <div class="govuk-grid-row">
  	 <div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-panel__title">
-			<span class="govuk-caption-xl">Enfield County School for Girls</span>
-			Thank you
-		</h1>
+		<span class="govuk-caption-xl">Enfield County School for Girls</span>
+		Thank you</h1>
 		<p>You’ve confirmed that Enfield School will not be offering fee-funded PE in 2022 to 2023.</p>
 		<h2 class="govuk-heading-m">What happens now? </h2>
 		<p>You don’t need to do anything else. If you want to change this choice, you have until 10 July to do so.</p> 
