--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -151,7 +151,7 @@
   {% include "course/_errors.html" %}
 
   {% set descriptionHtml %}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
+    <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h3 class="govuk-heading-m govuk-!-margin-top-0">
           <a href="{{ coursePath }}/about-this-course">About this course</a>
@@ -401,8 +401,8 @@
     </ul>
   {% endset %}
 
-  {% set historyHtml %}
-    <!-- <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020 to 2021 cycle</h2>
+  {# {% set historyHtml %}
+    <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020 to 2021 cycle</h2>
     <ul class="timeline">
       <li class="edition">
         <ul class="edition-timeline">
@@ -428,7 +428,7 @@
           </div>
         </ul>
       </li>
-    </ul> -->
+    </ul>
 
     <ul class="timeline">
       <li class="edition">
@@ -517,9 +517,9 @@
         </ul>
       </li>
     </ul>
-  {% endset %}
+  {% endset %} #}
 
-  <div class="course-tabs">
+  {# <div class="course-tabs">
     {{ govukTabs({
       items: [
         {
@@ -541,6 +541,28 @@
           id: "history",
           panel: {
             html: historyHtml
+          }
+        }
+      ]
+    }) }}
+  </div> #}
+  
+  {# We've hidden the History tab as it never got built into production #}
+  <div class="course-tabs">
+    {{ govukTabs({
+      items: [
+        {
+          label: 'Description<br /><span style="pointer-events: none" class="govuk-body-s govuk-!-font-weight-regular">Content, fees and eligibility</span>' | safe,
+          id: "description",
+          panel: {
+            html: descriptionHtml
+          }
+        },
+        {
+          label: 'Basic details<br /><span style="pointer-events: none" class="govuk-body-s govuk-!-font-weight-regular">Locations, outcome, subject</span>' | safe,
+          id: "information",
+          panel: {
+            html: informationHtml
           }
         }
       ]
