--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -547,7 +547,7 @@
     }) }}
   </div> #}
   
-  {# We've hidden the History tab as it never got built into production #}
+  {# We've hidden the History tab as it wasn't built in production #}
   <div class="course-tabs">
     {{ govukTabs({
       items: [
