--- a/app/views/allocations/check-answers.html
+++ b/app/views/allocations/check-answers.html
@@ -42,7 +42,7 @@
 
 		</div>	
 
-		<a class="govuk-button" href="/allocations/confirmation">Send request</a>
+    {{ govukButton({href: "/allocations/confirmation", text: "Send request"}) }}
 
 	</div>
 </div>
